--- a/SortingLibraryTesting/SortingLibraryTesting.csproj
+++ b/SortingLibraryTesting/SortingLibraryTesting.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InsertionSortTesting.cs" />
+    <Compile Include="MergeSortTesting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
